--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
   },
   "homepage": "https://github.com/JustUtahCoders/single-spa-foundry-cli#readme",
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.7",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-typescript": "^7.16.7",
-    "@changesets/cli": "^2.21.0",
+    "@changesets/cli": "^2.21.1",
     "@jest/types": "^27.5.1",
     "babel-jest": "^27.5.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-config-ts-important-stuff": "^1.1.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
@@ -43,11 +43,12 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.6.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "yargs": "^17.3.1"
   },
   "dependencies": {
+    "@single-spa-foundry/utils": "^1.0.2",
     "@types/node": "^17.0.21",
     "@types/yargs": "^17.0.9"
   }
