--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@single-spa-foundry/cli",
+  "name": "@baseplate-sdk/cli",
   "version": "0.0.0",
-  "description": "Deployment CLI for single-spa foundry",
+  "description": "Deployment CLI for Baseplate",
   "type": "module",
   "main": "lib/js-api.js",
   "bin": "lib/cli.js",
@@ -9,7 +9,7 @@
     "lib"
   ],
   "scripts": {
-    "cli": "cross-env NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" FOUNDRY_TOKEN=sample node src/cli.ts",
+    "cli": "cross-env NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node\" BASEPLATE_TOKEN=sample node src/cli.ts",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "lint": "eslint \"src/**/*\"",
@@ -19,14 +19,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JustUtahCoders/single-spa-foundry-cli.git"
+    "url": "git+https://github.com/JustUtahCoders/baseplate-cli.git"
   },
   "author": "Joel Denning",
-  "license": "MIT",
+  "license": "See LICENSE file",
   "bugs": {
-    "url": "https://github.com/JustUtahCoders/single-spa-foundry-cli/issues"
+    "url": "https://github.com/JustUtahCoders/baseplate-cli/issues"
   },
-  "homepage": "https://github.com/JustUtahCoders/single-spa-foundry-cli#readme",
+  "homepage": "https://github.com/JustUtahCoders/baseplate-cli#readme",
   "devDependencies": {
     "@babel/core": "^7.17.7",
     "@babel/eslint-parser": "^7.17.0",
@@ -48,7 +48,7 @@
     "yargs": "^17.3.1"
   },
   "dependencies": {
-    "@single-spa-foundry/utils": "^1.0.2",
+    "@baseplate-sdk/utils": "^2.0.0",
     "@types/node": "^17.0.21",
     "@types/yargs": "^17.0.9"
   }
