Implement majority of functionality

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-typescript": "^7.17.12",
     "@changesets/cli": "^2.22.0",
+    "@jest/globals": "^28.1.0",
     "@jest/types": "^28.1.0",
+    "@types/jest": "^27.5.1",
     "babel-jest": "^28.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
