--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@babel/core": "^7.17.12",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-typescript": "^7.17.12",
-    "@changesets/cli": "^2.22.0",
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.0",
     "@jest/globals": "^28.1.0",
     "@jest/types": "^28.1.0",
     "@types/jest": "^27.5.1",
