--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "outDir": "lib",
-    "target": "ES2022"
+    "target": "ES2022",
+    "declaration": true
   }
 }
