--- a/package.json
+++ b/package.json
@@ -32,33 +32,34 @@
   },
   "homepage": "https://github.com/JustUtahCoders/baseplate-cli#readme",
   "devDependencies": {
-    "@babel/core": "^7.17.12",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-typescript": "^7.17.12",
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@jest/globals": "^28.1.0",
-    "@jest/types": "^28.1.0",
-    "@types/jest": "^27.5.1",
-    "babel-jest": "^28.1.0",
+    "@jest/globals": "^29.4.1",
+    "@jest/types": "^29.4.1",
+    "@types/jest": "^29.4.0",
+    "babel-jest": "^29.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.15.0",
+    "eslint": "^8.32.0",
     "eslint-config-ts-important-stuff": "^1.1.0",
-    "husky": "^8.0.1",
-    "jest": "^28.1.0",
-    "jest-cli": "^28.1.0",
-    "prettier": "^2.6.2",
+    "husky": "^8.0.3",
+    "jest": "^29.4.1",
+    "jest-cli": "^29.4.1",
+    "node-fetch": "^3.3.0",
+    "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4",
-    "yargs": "^17.5.1"
+    "rimraf": "^4.1.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
+    "yargs": "^17.6.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.92.0",
-    "@baseplate-sdk/utils": "^3.1.1",
+    "@aws-sdk/client-s3": "^3.259.0",
+    "@baseplate-sdk/utils": "^3.1.2",
     "@baseplate-sdk/web-app": "^2.0.3",
-    "@types/node": "^17.0.35",
-    "@types/yargs": "^17.0.10"
+    "@types/node": "^18.11.18",
+    "@types/yargs": "^17.0.20"
   }
 }
