--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Deployment CLI for Baseplate",
   "type": "module",
   "main": "lib/js-api.js",
-  "bin": "lib/cli.js",
+  "bin": {
+    "baseplate": "lib/cli.js"
+  },
   "files": [
     "lib"
   ],
