--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "lib"
   ],
   "scripts": {
-    "cli": "cross-env NODE_OPTIONS=\"--loader ts-node/esm --experimental-specifier-resolution=node --experimental-fetch\" node src/cli.ts",
+    "cli": "cross-env NODE_OPTIONS=\"--import ./register-loaders.js --experimental-specifier-resolution=node --experimental-fetch\" node src/cli.ts",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "lint": "eslint \"src/**/*\"",
-    "build": "rimraf lib && tsc",
+    "build": "rimraf lib && tsc && fix-esm-import-path lib",
     "prepublishOnly": "pnpm run build",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
@@ -34,34 +34,39 @@
   },
   "homepage": "https://github.com/ConvexCooperative/baseplate-cli#readme",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-typescript": "^7.18.6",
-    "@changesets/changelog-github": "^0.4.8",
-    "@changesets/cli": "^2.26.0",
-    "@jest/globals": "^29.4.1",
-    "@jest/types": "^29.4.1",
-    "@types/jest": "^29.4.0",
-    "babel-jest": "^29.4.1",
+    "@babel/core": "^7.23.7",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.1",
+    "@jest/globals": "^29.7.0",
+    "@jest/types": "^29.6.3",
+    "@node-loader/babel": "^2.1.0",
+    "@node-loader/extensionless": "^1.1.1",
+    "@types/jest": "^29.5.11",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.32.0",
+    "eslint": "^8.56.0",
     "eslint-config-ts-important-stuff": "^1.1.0",
+    "fix-esm-import-path": "^1.5.0",
     "husky": "^8.0.3",
-    "jest": "^29.4.1",
-    "jest-cli": "^29.4.1",
-    "node-fetch": "^3.3.0",
-    "prettier": "^2.8.3",
-    "pretty-quick": "^3.1.3",
-    "rimraf": "^4.1.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "yargs": "^17.6.2"
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "node-fetch": "^3.3.2",
+    "prettier": "^3.2.2",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.3.3",
+    "yargs": "^17.7.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.259.0",
-    "@baseplate-sdk/utils": "^3.1.2",
-    "@baseplate-sdk/web-app": "^2.0.3",
-    "@types/node": "^18.11.18",
-    "@types/yargs": "^17.0.20"
+    "@aws-sdk/client-s3": "^3.490.0",
+    "@baseplate-sdk/utils": "^3.2.1",
+    "@baseplate-sdk/web-app": "^5.0.0",
+    "@types/node": "^20.11.3",
+    "@types/yargs": "^17.0.32"
+  },
+  "lint-staged": {
+    "*": "prettier --write"
   }
 }
