--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "lint-staged": "^15.2.0",
+    "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
     "prettier": "^3.2.2",
     "rimraf": "^5.0.5",
@@ -64,7 +65,8 @@
     "@baseplate-sdk/utils": "^3.2.1",
     "@baseplate-sdk/web-app": "^5.0.0",
     "@types/node": "^20.11.3",
-    "@types/yargs": "^17.0.32"
+    "@types/yargs": "^17.0.32",
+    "uuid": "^9.0.1"
   },
   "lint-staged": {
     "*": "prettier --write"
