--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "outDir": "lib",
     "target": "ES2022",
-    "declaration": true
+    "declaration": true,
+    "resolveJsonModule": true
   }
 }
