--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "lib/js-api.js",
   "bin": {
-    "baseplate": "lib/cli.js"
+    "baseplate": "lib/src/cli.js"
   },
   "files": [
     "lib"
