--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "@types/node": "^20.11.3",
     "@types/yargs": "^17.0.32",
     "chalk": "^5.3.0",
-    "uuid": "^9.0.1"
+    "generator-single-spa": "^4.1.5",
+    "uuid": "^9.0.1",
+    "yeoman-environment": "^4.4.0"
   },
   "lint-staged": {
     "*": "prettier --write"
