--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lib"
   ],
   "scripts": {
-    "cli": "cross-env BASEPLATE_API=\"http://localhost:7600\" BASEPLATE_TOKEN=\"5d1de1f1-25cc-4450-8b3c-b6f1482fff72\" NODE_OPTIONS=\"--import ./register-loaders.js --experimental-specifier-resolution=node --experimental-fetch\" node src/cli.ts",
+    "cli": "cross-env BASEPLATE_API=\"http://localhost:7600\" NODE_OPTIONS=\"--import ./register-loaders.js --experimental-specifier-resolution=node --experimental-fetch\" node src/cli.ts",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "lint": "eslint \"src/**/*\"",
@@ -68,6 +68,7 @@
     "@types/node": "^20.11.3",
     "@types/yargs": "^17.0.32",
     "chalk": "^5.3.0",
+    "conf": "^12.0.0",
     "generator-single-spa": "^4.1.5",
     "uuid": "^9.0.1",
     "yeoman-environment": "^4.4.0"
