--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-typescript"],
-  "plugins": ["@babel/plugin-syntax-import-attributes"]
+  "plugins": ["@babel/plugin-syntax-import-attributes"],
 }
